--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,16 @@
   </head>
 
   <body>
+    <div class="navbar-wagon">
+    <!-- Logo -->
+    <%=link_to "Wikinimous", articles_path, :class => "navbar-wagon-brand" %>
+
+    <!-- Right Navigation -->
+    <div class="navbar-wagon-right hidden-xs hidden-sm">
+
+    <%=link_to "New article", new_article_path, :class => "btn btn-warning" %>
+    </div>
+    </div>
     <%= yield %>
   </body>
 </html>
