--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,19 @@
 <div class="container">
-  <h1> <%= @article.title %> </h1>
+  <div class="title">
+  <h1>
+    <%= @article.title %>
+
+    <div class="title-links">
+      <%= link_to article_path(@article), method: :delete do %>
+        <i class="far fa-trash-alt"></i>
+      <% end %>
+      <%= link_to edit_article_path(@article) do %>
+        <i class="far fa-edit"></i>
+      <% end %>
+    </div>
+  </h1>
+  </div>
+  <div class="content">
     <p> <%= @article.content %> </p>
+  </div>
 </div>
